<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_full">F-Droid</string>
    <string name="app_name_basic">F-Droid Basic</string>
    <string name="app_name_full_nightly">F-Nightly</string>
    <string name="app_name_basic_nightly">F-Nightly Basic</string>
    <string name="menu_about">About</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_apps_my">My apps</string>
    <string name="first_start_loading">Fetching app repositories…</string>
    <string name="first_start_intro">To get started, sync app repositories</string>
    <string name="first_start_offline">You\'re offline. Connect to the Internet to start.</string>
    <string name="first_start_metered">You\'re on mobile data and more than 10 MB will be downloaded. Tap Fetch repositories to start anyway.</string>
    <string name="first_start_button">Fetch repositories</string>
    <string name="no_repos_enabled">No repositories available, add a repository to get started</string>
    <string name="my_apps_empty">Only apps available in %1$s\'s repositories are shown here</string>
    <string name="my_apps_header_recently_installed_apps">Recently installed</string>
    <string name="my_apps_header_apps_with_issue">Apps with issues</string>
    <string name="my_apps_ignore_dialog_title">Hide issue</string>
    <string name="my_apps_ignore_dialog_text">The issue with this version of \"%1$s\" will get ignored</string>
    <string name="my_apps_ignore_dialog_button">Hide</string>
    <string name="my_apps_export_installed_apps">Export app list</string>
    <string name="app_list_new">New apps</string>
    <string name="app_list_recently_updated">Recently updated</string>
    <string name="app_list_most_downloaded">Most downloaded</string>
    <string name="app_list_all">All apps</string>
    <string name="app_list_author">Apps by %s</string>
    <string name="search_placeholder">Search…</string>
    <string name="search_history">Recent searches</string>
    <string name="search_no_results">No apps found\n\nTry using fewer search terms or add more repositories</string>
    <string name="search_filter_no_results">No matching apps\n\nTry using fewer search terms or remove filters</string>
    <string name="search_my_apps_no_results">No matching apps\n\nTry using fewer search terms</string>
    <string name="search_auto_keyboard">Automatically open keyboard</string>
    <string name="sort_title">Sorting and compatibility</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_latest">Sort by last update</string>
    <string name="filter_only_compatible">Apps compatible with this device</string>
    <string name="filter_button_save">Save as default</string>
    <string name="filter_intro">Filter apps by</string>
    <string name="filter_button_clear_all">Clear all filters</string>
    <string name="filter">Filter</string>
    <string name="filter_selected">selected</string>
    <string name="category">Category</string>
    <string name="filter_antifeatures">Hide anti-features</string>
    <string name="onboarding_app_list_filter_title">Filter</string>
    <string name="onboarding_app_list_filter_message">Use filters to only show apps from specific categories or repositories. You can also change the sort order.</string>
    <string name="got_it">Got it</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear all</string>
    <string name="hide">Hide</string>
    <string name="category_group_productivity">Productivity</string>
    <string name="category_group_tools">Tools</string>
    <string name="category_group_wallets">Finances &amp; Wallets</string>
    <string name="category_group_media">Entertainment &amp; Media</string>
    <string name="category_group_communication">Communication</string>
    <string name="category_group_device">Device</string>
    <string name="category_group_games">Games</string>
    <string name="category_group_network">Network</string>
    <string name="category_group_storage">Files &amp; Storage</string>
    <string name="category_group_interests">Interests</string>
    <string name="category_group_misc">Miscellaneous</string>
    <string name="category_group_summary_productivity">Calendars, tasks, clocks &amp; notes</string>
    <string name="category_group_summary_tools">Navigation, weather, calculators &amp; converters</string>
    <string name="category_group_summary_wallets">Finance, money &amp; pass managers</string>
    <string name="category_group_summary_media">Music, podcasts, games &amp; ebook readers</string>
    <string name="category_group_summary_communication">Email, messaging &amp; social networks</string>
    <string name="category_group_summary_device">Launcher, keyboard, security &amp; theming</string>
    <string name="category_group_summary_games">Board, card &amp; party games</string>
    <string name="category_group_summary_network">Browser, VPNs, proxies &amp; firewall</string>
    <string name="category_group_summary_storage">Files, gallery, cloud sync &amp; encryption</string>
    <string name="category_group_summary_interests">Science, sports, drawing &amp; recipes</string>
    <string name="category_group_summary_misc">Uncategorized</string>
    <string name="last_updated">Last updated: %1$s</string>
    <string name="last_updated_with_size">Last updated: %1$s (%2$s)</string>
    <string name="status_install_preparing">Preparing installation…</string>
    <string name="whats_new_title">What\'s new</string>
    <string name="donate_title">Donate</string>
    <string name="anti_features_title">This app has anti-features</string>
    <string name="developer_contact">Developer contact</string>
    <string name="technical_info">Technical information</string>
    <string name="package_name">Package name:</string>
    <string name="installed_version">Installed version:</string>
    <string name="SignatureMismatch">The new version is signed with a different key to the old one. To install the new
        version, the old one must be uninstalled first. Please do this and try again. (Note that uninstalling will erase
        any internal data stored by the app)
    </string>
    <string name="installIncompatible">App incompatible with your device, install anyway?</string>
    <string name="version">Version</string>
    <string name="by_author_format">by %s</string>
    <string name="delete">Delete</string>
    <string name="prompt_to_send_crash_reports">Prompt to send crash reports</string>
    <string name="prompt_to_send_crash_reports_summary">Gather data about crashes and ask to send them to the
        developer
    </string>
    <string name="cache_downloaded">Keep cached apps</string>
    <string name="updates">Updates</string>
    <string name="unstable_updates">Unstable updates</string>
    <string name="unstable_updates_summary">Suggest updates to unstable versions</string>
    <string name="hide_all_notifications">Hide all notifications</string>
    <string name="hide_all_notifications_summary">Prevent all actions from showing in the status bar and notification
        drawer.
    </string>
    <string name="send_install_history">Send install history</string>
    <string name="send_fdroid_metrics_report">Send %s Metrics report</string>
    <string name="send_history_csv">%s install history as CSV file</string>
    <string name="send_fdroid_metrics_json">%s Metrics report as JSON file</string>
    <string name="install_history">Install history</string>
    <string name="install_history_and_metrics">Install history and metrics</string>
    <string name="fdroid_metrics_report">%s Metrics report</string>
    <string name="install_history_summary">View the private log of all installs and uninstalls</string>
    <string name="keep_install_history">Keep install history</string>
    <string name="keep_install_history_summary">Store a log of all installs and uninstalls in a private store</string>
    <string name="send_to_fdroid_metrics">Send usage data</string>
    <string name="send_to_fdroid_metrics_summary">Sends anonymous data weekly to F-Droid Metrics (requires "Keep install history")</string>
    <string name="toast_metrics_in_install_history">The %s Metrics report is viewable in the install history viewer</string>
    <string name="send_version_and_uuid">Send version and UUID to servers</string>
    <string name="send_version_and_uuid_summary">Include this app\'s version and a random, unique ID when
        downloading, takes effect next app restart.</string>
    <string name="force_old_index">Force old index format</string>
    <string name="force_old_index_summary">In case there are bugs or compatibility issues, use the XML app index</string>
    <string name="other">Other</string>
    <string name="update_interval">Automatic update interval</string>
    <string name="update_auto_download">Automatically download updates</string>
    <string name="update_auto_download_summary">Updates are downloaded automatically and you are notified to install
        them
    </string>
    <string name="notify">Show available updates</string>
    <string name="system_installer">Privileged Extension</string>
    <string name="local_repo_name">Name of your Local Repo</string>
    <string name="links">Links</string>
    <string name="more">More</string>
    <string name="menu_manage">Repositories</string>
    <string name="repositories_summary">Add additional sources of apps</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_ignore_all">Ignore all updates</string>
    <string name="menu_ignore_this">Ignore this update</string>
    <string name="menu_website">Website</string>
    <string name="menu_issues">Issues</string>
    <string name="menu_changelog">Changelog</string>
    <string name="menu_source">Source code</string>
    <string name="menu_bitcoin">Bitcoin</string>
    <string name="menu_litecoin">Litecoin</string>
    <string name="menu_flattr">Flattr</string>
    <string name="main_menu__latest_apps">Latest</string>
    <string name="main_menu__categories">Categories</string>
    <string name="main_menu__swap_nearby">Nearby</string>
    <string name="preference_category__my_apps">My apps</string>
    <string name="preference_manage_installed_apps">Manage installed apps</string>
    <string name="display">Display</string>
    <string name="expert">Expert mode</string>
    <string name="appcompatibility">App compatibility</string>
    <string name="show_incompat_versions">Include incompatible versions</string>
    <string name="local_repo">Local Repo</string>
    <string name="useTor">Use Tor</string>
    <string name="useTorSummary">Force download traffic through Tor for increased privacy. Requires Orbot</string>
    <string name="proxy">Proxy</string>
    <string name="enable_proxy_title">Enable HTTP proxy</string>
    <string name="enable_proxy_summary">Configure HTTP proxy for all network requests</string>
    <string name="proxy_host">Proxy host</string>
    <string name="proxy_host_summary">Your proxy\'s hostname (e.g. 127.0.0.1)</string>
    <string name="proxy_port">Proxy port</string>
    <string name="proxy_port_summary">Your proxy\'s port number (e.g. 8118)</string>
    <string name="panic_app_setting_title">Panic button app</string>
    <string name="panic_app_setting_summary">No app has been set</string>
    <string name="panic_exit_title">Exit app</string>
    <string name="panic_exit_summary">This app will be closed</string>
    <string name="panic_destructive_actions">Destructive actions</string>
    <string name="panic_hide_title">Hide %s</string>
    <string name="panic_hide_summary">App will hide itself</string>
    <string name="permissions">Permissions</string>
    <string name="theme">Theme</string>
    <string name="pref_language">Language</string>
    <string name="swap">Swap apps</string>
</resources>