<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <CheckBoxPreference
        android:defaultValue="@bool/defaultPanicExit"
        android:key="pref_panic_exit"
        android:summary="@string/panic_exit_summary"
        android:title="@string/panic_exit_title"/>

    <PreferenceCategory
        android:key="pref_panic_destructive_actions"
        android:title="@string/panic_destructive_actions">

        <ListPreference
            android:key="pref_panic_app"
            android:summary="@string/panic_app_setting_summary"
            android:title="@string/panic_app_setting_title"
            tools:icon="@drawable/ic_cancel"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="pref_panic_hide"
            android:summary="@string/panic_hide_summary"
            android:title="@string/panic_hide_title"/>

    </PreferenceCategory>

</PreferenceScreen>