<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>
    <item
        android:id="@+id/action_update_repo"
        android:icon="@drawable/ic_refresh_white"
        android:title="@string/menu_update_repo"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_swap"
        android:title="@string/swap"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_manage_repos"
        android:icon="@drawable/ic_toc_white"
        android:title="@string/menu_manage"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_bluetooth_apk"
        android:icon="@drawable/ic_bluetooth_white"
        android:title="@string/menu_send_apk_bt"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_help_white"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom"/>

</menu>
