<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/main_menu__latest_apps"
        android:icon="@drawable/ic_overview"
        app:showAsAction="ifRoom"
        android:id="@+id/whats_new" />
    <item
        android:title="@string/main_menu__categories"
        android:icon="@drawable/ic_category"
        app:showAsAction="ifRoom"
        android:id="@+id/categories" />
    <item
        android:title="@string/main_menu__swap_nearby"
        android:icon="@drawable/ic_nearby"
        app:showAsAction="ifRoom"
        android:id="@+id/nearby" />
    <item
        android:title="@string/main_menu__my_apps"
        android:icon="@drawable/ic_my_apps"
        app:showAsAction="ifRoom"
        android:id="@+id/my_apps" />
    <item
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:id="@+id/settings" />
</menu>