<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015 Nico Alt, nicoalt@posteo.org

    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
    as published by the Free Software Foundation; either version 3
    of the License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program; if not, write to the Free Software
    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/layout_horizontal_margin"
    android:paddingStart="@dimen/layout_horizontal_margin"
    android:paddingRight="@dimen/layout_horizontal_margin"
    android:paddingEnd="@dimen/layout_horizontal_margin"
    android:paddingTop="4dp">

    <TextView
        android:id="@+id/summary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="Application manager" />

    <TextView
        android:id="@+id/package_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        tools:text="org.fdroid.fdroid" />

    <TextView
        android:id="@+id/signature"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <!-- android:visibility="gone" because not needed in app details imho (but maybe will get used in another place soon) -->
    <TextView
        android:id="@+id/categories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:visibility="gone"
        tools:text="System" />

    <TextView
        android:id="@+id/antifeatures"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6sp"
        android:textColor="#ff0000"
        android:textStyle="bold"
        tools:text="Feeds you too much chocolate" />

    <LinearLayout
        android:id="@+id/ll_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:singleLine="false"
            android:textSize="13sp"
            tools:text="Connects to F-Droid compatible repositories. The default repo is hosted at f-droid.org, which contains only bona fide FOSS.

Android is open in the sense that you are free to install apks from anywhere you wish, but there are many good reasons for using a client/repository setup:

    * Be notified when updates are available
    * Keep track of older and beta versions
    * Filter apps that aren't compatible with the device
    * Find apps via categories and searchable descriptions
    * Access associated urls for donations, source code etc.
    * Stay safe by checking repo index signatures and apk hashes

Changelog" />

        <TextView
            android:id="@+id/view_more_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/more"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:textColor="?android:textColorSecondary"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        tools:ignore="PxUsage" />

    <LinearLayout
        android:id="@+id/ll_information"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/information"
            style="@style/AppDetailsSubheaderText"
            android:text="@string/links"
            android:drawableRight="@drawable/ic_expand_more_grey600"
            android:drawableEnd="@drawable/ic_expand_more_grey600"
            android:drawableLeft="@drawable/ic_website"
            android:drawableStart="@drawable/ic_website" />

        <LinearLayout
            android:id="@+id/ll_information_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/layout_horizontal_margin"
            android:layout_marginStart="@dimen/layout_horizontal_margin"
            android:visibility="gone">

            <TextView
                android:id="@+id/source"
                style="@style/AppDetailsLink"
                android:drawableLeft="@drawable/ic_source_code"
                android:drawableStart="@drawable/ic_source_code"
                android:text="@string/menu_source" />

            <TextView
                android:id="@+id/issues"
                style="@style/AppDetailsLink"
                android:drawableLeft="@drawable/ic_issues"
                android:drawableStart="@drawable/ic_issues"
                android:text="@string/menu_issues" />

            <TextView
                android:id="@+id/changelog"
                style="@style/AppDetailsLink"
                android:drawableLeft="@drawable/ic_changelog"
                android:drawableStart="@drawable/ic_changelog"
                android:text="@string/menu_changelog" />

            <TextView
                android:id="@+id/website"
                style="@style/AppDetailsLink"
                android:drawableLeft="@drawable/ic_website"
                android:drawableStart="@drawable/ic_website"
                android:text="@string/menu_website" />

            <TextView
                android:id="@+id/donate"
                style="@style/AppDetailsLink"
                android:drawableLeft="@drawable/ic_donate"
                android:drawableStart="@drawable/ic_donate"
                android:text="@string/menu_donate" />

            <TextView
                android:id="@+id/bitcoin"
                style="@style/AppDetailsLink"
                android:drawableLeft="@drawable/ic_bitcoin"
                android:drawableStart="@drawable/ic_bitcoin"
                android:text="@string/menu_bitcoin" />

            <TextView
                android:id="@+id/litecoin"
                style="@style/AppDetailsLink"
                android:drawableLeft="@drawable/ic_litecoin"
                android:drawableStart="@drawable/ic_litecoin"
                android:text="@string/menu_litecoin" />

            <TextView
                android:id="@+id/flattr"
                style="@style/AppDetailsLink"
                android:drawableLeft="@drawable/ic_flattr"
                android:drawableStart="@drawable/ic_flattr"
                android:text="@string/menu_flattr" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_permissions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/permissions"
            style="@style/AppDetailsSubheaderText"
            android:text="@string/permissions"
            android:drawableLeft="@drawable/ic_lock_24dp_grey600"
            android:drawableStart="@drawable/ic_lock_24dp_grey600"
            android:drawableRight="@drawable/ic_expand_more_grey600"
            android:drawableEnd="@drawable/ic_expand_more_grey600" />

        <TextView
            android:id="@+id/permissions_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:fontFamily="sans-serif-light"
            android:textSize="14sp"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/layout_horizontal_margin"
            android:layout_marginStart="@dimen/layout_horizontal_margin"
            tools:text="    * Full network access
    * View network connections
    * View Wi-Fi connections
    * Connect and disconnect from Wi-Fi
    * Pair with Bluetooth devices
    * Run at startup
    * Modify or delete the contents of your USB storage
    * Control Near Field Communication
    * Directly install apps
    * Delete apps
    * Full permission to all device features and storage
    * Test access to protected storage" />

    </LinearLayout>

</LinearLayout>
